--- a/index.html
+++ b/index.html
@@ -8,35 +8,35 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200&display=swap" rel="stylesheet">        
-    <link rel="stylesheet" href="css/estilos.css">
+    <link rel="stylesheet" href="estilos.css">
     <script src="https://kit.fontawesome.com/2bc45499a5.js" crossorigin="anonymous"></script>
     <title>Power Gym - Home</title>
   </head>
   <body>
       <section>
               <div class="col-lg-11">
-                <nav class="navbar navbar-expand-lg text-light">
-                    <a class="navbar-brand text-light lead-xl" href="#">Power <span class="font-weight-bold">Gym</span></a>
-                    <button class="navbar-toggler text-light" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <nav class="navbar navbar-expand-lg text-dark">
+                    <a class="navbar-brand text-dark lead-xl" href="#">Power <span class="font-weight-bold">Gym</span></a>
+                    <button class="navbar-toggler text-dark" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                       <span class="navbar-toggler-icon"><i class="fa-solid fa-bars"></i></span>
                     </button>
                   
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                       <ul class="navbar-nav ml-auto">
                         <li class="nav-item active">
-                          <a class="nav-link lead text-light" href="#">Home</a>
+                          <a class="nav-link lead text-dark" href="#">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link lead text-light" href="#">Rutinas</a>
+                            <a class="nav-link lead text-dark" href="#">Rutinas</a>
                           </li>
                         <li class="nav-item">
-                            <a class="nav-link lead text-light" href="pages/calisthenics.html">Calistenia</a>
+                            <a class="nav-link lead text-dark" href="pages/calisthenics.html">Calistenia</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link lead text-light" href="#">Gimnasio</a>
+                            <a class="nav-link lead text-dark" href="#">Gimnasio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link lead text-light" href="#">Nosotros</a>
+                            <a class="nav-link lead text-dark" href="#">Nosotros</a>
                         </li>
                       </ul>
                     </div>
@@ -73,55 +73,8 @@
             </div>
             <div>
             </div>
-            <hr>
-            <div class="container">
-              <div class="row">
-                <div class="col-lg-4">
-                  <div class="card containerHome">
-                    <img class="zoom"
-                      src="img/home1.jpg"
-                      class="card-img-top"
-                      alt="Waterfall"
-                    />
-                    <div class="card-body">
-                      <h5 class="card-title">Subtitulo</h5>
-                      <p class="card-text">
-                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Praesentium blanditiis quisquam, expedita dolorum eos minus?
-                      </p>
-                    </div>
-                  </div>
-                </div>
-      
-                <div class="col-lg-4 d-none d-lg-block">
-                  <div class="card containerHome">
-                    <img class="zoom"
-                      src="img/home2.jpg"
-                      class="card-img-top"
-                      alt="Sunset Over the Sea"
-                    />
-                    <div class="card-body">
-                      <h5 class="card-title">Subtitulo</h5>
-                      <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur, animi.
-                      </p>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-lg-4 d-none d-lg-block">
-                  <div class="card containerHome zoom">
-                    <img class="zoom"
-                      src="img/home3.jpg"
-                      class="card-img-top"
-                      alt="Sunset Over the Sea"
-                    />
-                    <div class="card-body">
-                      <h5 class="card-title">Subtitulo</h5>
-                      <p class="card-text">
-                        Lorem ipsum, dolor sit amet consectetur adipisicing.
-                      </p>
-                    </div>
-                  </div>
-                </div>
       </section>
+      <hr>
       <footer class="text-center text-white footer-color">
         <div class="container pt-4">
           <section class="mb-4">
