--- a/pages/routines.html
+++ b/pages/routines.html
@@ -1,89 +1,90 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="es">
-    <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200&display=swap" rel="stylesheet">        
-    <link rel="stylesheet" href="../estilos.css">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../css/estilos.css">
     <script src="https://kit.fontawesome.com/2bc45499a5.js" crossorigin="anonymous"></script>
-    <title>Power Gym - mixin</title>
-    </head>
-    <body>
-        <section>
-            <div class="col-lg-11">
-            <nav class="navbar navbar-expand-lg text-light">
-                <a class="navbar-brand text-light lead-xl" href="#">Power <span class="font-weight-bold">Gym</span></a>
-                <button class="navbar-toggler text-light" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"><i class="fa-solid fa-bars"></i></span>
-                </button>
-                
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav ml-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link lead text-light" href="../index.html">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link lead text-light" href="routines.html">Rutinas</a>
-                        </li>
-                    <li class="nav-item">
-                        <a class="nav-link lead text-light" href="calisthenics.html">Calistenia</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link lead text-light" href="gym.html">MAPS</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link lead text-light" href="info.html">Nosotros</a>
-                    </li>
-                    </ul>
-                </div>
-                </nav>
-            </div>
-        </div>
-        <div class="container align-self-centern px-5">
-        <h1 class="text-uppercase font-weight-bold mb-4">MIXINS</h1>
-        <p class="lead-xl">Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, accusamus.</p>
+    <title>Power Gym - Rutinas</title>
+</head>
+
+<header class="header">
+    <a href="#" class="uppercase">Power <span>Gym</span></a>
+    <div class="header-right">
+        <li>
+            <a href="../index.html">Home</a>
+            <a href="calisthenics.html">Calistenia</a>
+            <a href="gym.html">Gimnasio</a>
+            <a href="routines.html">Rutinas</a>
+            <a href="info.html">Nosotros</a>
+        </li>
     </div>
-    <div class="mapa1">soy el mapa 1</div>
-    </div>
-        </section>
-        <footer class="text-center text-white footer-color">
-        <div class="container pt-4">
-            <section class="mb-4">
-            <a
-                class="btn btn-link btn-floating btn-lg text-dark m-1"
-                href="#!"
-                role="button"
-                data-mdb-ripple-color="dark"
-                ><i class="fab fa-facebook-f"></i
-            ></a>
-            <a
-                class="btn btn-link btn-floating btn-lg text-dark m-1"
-                href="#!"
-                role="button"
-                data-mdb-ripple-color="dark"
-                ><i class="fab fa-youtube"></i
-            ></a>
-            <a
-                class="btn btn-link btn-floating btn-lg text-dark m-1"
-                href="#!"
-                role="button"
-                data-mdb-ripple-color="dark"
-                ><i class="fab fa-instagram"></i
-            ></a>
-            </section>
+</header>
+<body>
+  <section>
+    <h1>Rutinas</h1>
+    <p class="text-light">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt, illo!</p>
+  </section>
+  <section class="carousel" aria-label="Gallery">
+    <ol class="carousel__viewport">
+      <li id="carousel__slide1"
+          tabindex="0"
+          class="carousel__slide">
+        <div class="carousel__snapper">
+          <a href="#carousel__slide4"
+              class="carousel__prev">Go to last slide</a>
+          <a href="#carousel__slide2"
+              class="carousel__next">Go to next slide</a>
         </div>
-        <div class="text-center text-dark p-3 copyright">
-            © 2020 Copyright:
-            <a class="text-dark" href="../index.html">Powergym.com</a>
-        </div>
-        </footer>
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js" integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2" crossorigin="anonymous"></script>
-    
-    </body>
-</html>
+      </li>
+      <li id="carousel__slide2"
+          tabindex="0"
+          class="carousel__slide">
+        <div class="carousel__snapper"></div>
+        <a href="#carousel__slide1"
+            class="carousel__prev">Go to previous slide</a>
+        <a href="#carousel__slide3"
+            class="carousel__next">Go to next slide</a>
+      </li>
+      <li id="carousel__slide3"
+          tabindex="0"
+          class="carousel__slide">
+        <div class="carousel__snapper"></div>
+        <a href="#carousel__slide2"
+            class="carousel__prev">Go to previous slide</a>
+        <a href="#carousel__slide4"
+            class="carousel__next">Go to next slide</a>
+      </li>
+      <li id="carousel__slide4"
+          tabindex="0"
+          class="carousel__slide">
+        <div class="carousel__snapper"></div>
+        <a href="#carousel__slide3"
+            class="carousel__prev">Go to previous slide</a>
+        <a href="#carousel__slide1"
+            class="carousel__next">Go to first slide</a>
+      </li>
+    </ol>
+    <aside class="carousel__navigation">
+      <ol class="carousel__navigation-list">
+        <li class="carousel__navigation-item">
+          <a href="#carousel__slide1"
+              class="carousel__navigation-button">Go to slide 1</a>
+        </li>
+        <li class="carousel__navigation-item">
+          <a href="#carousel__slide2"
+              class="carousel__navigation-button">Go to slide 2</a>
+        </li>
+        <li class="carousel__navigation-item">
+          <a href="#carousel__slide3"
+              class="carousel__navigation-button">Go to slide 3</a>
+        </li>
+        <li class="carousel__navigation-item">
+          <a href="#carousel__slide4"
+              class="carousel__navigation-button">Go to slide 4</a>
+        </li>
+      </ol>
+    </aside>
+  </section>
+</body>
